# forge-os

./: .gitignore  .mailmap  ADR.md  AGENTS.md  ARCHITECTURE.md  BUILD_SPEC.md  CLAUDE.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  IMPLEMENTATION_PLAN.md  PACKAGE_LAYOUT.md  README-BUILD.md  README.md  ROADMAP.md  SCHEMAS.md  SECURITY_BASELINE.md  SRS.md  SRSv2.md  STATUS.md  TEST_STRATEGY.md  pyproject.toml
.claude/rules/: api-design.md  architechture.md  code-quality.md  engineering-principal.md  error-handling.md  frontend-consistancy.md  git-workflow.md  llm-prompts.md  performance.md  security.md  testing.md
.github/workflows/: ci.yml  perf.yml
adr/: ADR-001-runtime-and-packaging.md  ADR-002-local-first-core.md  ADR-003-open-formats.md  ADR-004-state-ownership-and-atomic-writes.md  ADR-005-kernel-adapter-boundary.md  ADR-006-optional-layers.md  ADR-007-security-and-human-approval.md  ADR-008-openclaw-boundary.md
plan/: ADAPTER_ROADMAP.md  CURRENT_PHASE.md  KERNEL_ADAPTER_INTERFACE.md  OPENCLAW_ADAPTER_ARCHITECTURE.md  ORCHESTRATOR.md  PHASE-00-foundation.md  PHASE-01-cli-scaffold.md  PHASE-02-state-machine.md  PHASE-03-events-hooks.md  PHASE-04-gates-mvp.md  PHASE-05-adapters-agents.md  PHASE-05.5-claude-code-adapter.md  PHASE-06-memory-lessons.md  PHASE-07-adg-context.md  PHASE-08-backtrack-security.md  PHASE-08.5-async-cocoindex.md  PHASE-09-health-global-skills.md  PHASE-10-daemon-dreamer-lazy-context.md  PHASE-11-channels-openclaw-extensions.md  PHASE-12-integration-perf-testing.md  PHASE-13-docs-release-engineering.md  PHASE_STATUS_TEMPLATE.md  PLAYBOOK.md  QUESTIONS.md  RESUME.md  SCOPE-doctor-and-token-budget-cli.md  SCOPE-observability-cost-backlog.md
plan/Phase-by-Phase System Upgrade and Sprint Planning/: ADDITIVE-BACKLOG.md  AEGIS-VS-FORGEOS-GAP-ANALYSIS.md
plan/fork-a/: PHASE-A1-commitgate-extract.md
plan/v3/: ARCHITECHTURE.md  README.md  SRS.md  SRS_COMPLETE.md  TECH_SPEC_COMPLETE.md  plan.md  technical-spec.md
plan/v4/: KERNEL_UPDATED_PLAN.md  MEMORY_CONTEXT_UPDATED_PLAN.md  SRSv4.1.md
plan/v4/parking-lot/: IMPORTANT_UPDATE.md  README.md  SRSv4.1ADDON.md
refereneces/: related-project-map.md
src/forge_os/: __init__.py
src/forge_os/adapters/: __init__.py  async_base.py  async_dummy.py  base.py  bridge.py  dummy.py  registry.py
src/forge_os/agents/: __init__.py  executor.py  loader.py  models.py
src/forge_os/channels/: __init__.py  base.py  console.py  errors.py  identity.py  intake.py  normalize.py  policy.py
src/forge_os/cli/: __init__.py  main.py
src/forge_os/config/: __init__.py  loader.py  writer.py
src/forge_os/context/: __init__.py  lazy.py  models.py  pruner.py  registry.py  skills_reader.py  token_monitor.py
src/forge_os/core/: __init__.py  state_manager.py
src/forge_os/cost/: __init__.py  aggregator.py
src/forge_os/daemon/: __init__.py  process.py  runner.py  scheduler.py  state.py  tasks.py  throttle.py
src/forge_os/dreamer/: __init__.py  decay.py  digest.py  tensions.py  timeutil.py
src/forge_os/events/: __init__.py  bus.py  log.py  model.py  store.py
src/forge_os/extensions/: __init__.py  errors.py  installer.py  manifest.py  store.py
src/forge_os/gates/: __init__.py  coordinator.py  evaluator.py  loader.py  models.py
src/forge_os/harness/: __init__.py  comparison_harness.py
src/forge_os/health/: __init__.py  acp.py  adg.py  checker.py  cost_cap.py  doctor.py  gates.py  hook_latency.py  memory.py  monitor.py  monitor_config.py  remediation.py  state.py  token_budget.py
src/forge_os/hooks/: __init__.py  registry.py  timing.py
src/forge_os/kernel/: __init__.py  acp_client.py  (+3 more)
tasks/: lessons.md  todo.md
tests/: cli_helpers.py  test_acp_phase08.py  test_adapters_agents_phase05.py  test_adapters_async.py  test_adapters_bridge.py  test_adapters_claude_code.py  test_adapters_claude_code_hooks.py  test_adapters_claude_code_replay.py  test_adapters_claude_raw.py  test_adapters_claude_sdk.py  test_adapters_codex.py  test_adapters_event_recording.py  test_adapters_human.py  test_adapters_openclaw.py  test_adapters_opencode.py  test_agents_executor_token_monitor.py  test_backtrack_security_phase08.py  test_channels_base.py  test_channels_identity.py  test_channels_intake.py  test_channels_normalize.py  test_channels_policy.py  test_cli_adapter.py  test_cli_channel.py  test_cli_cost.py  test_cli_daemon.py  test_cli_doctor.py  test_cli_dreamer.py  test_cli_events_phase03.py  test_cli_gates_phase04.py  test_cli_health_knowledge.py  test_cli_observability.py  test_cli_phase01.py  test_cli_plug.py  test_cli_stage_phase02.py  test_config_writer.py  test_context_lazy.py  test_context_phase07.py  test_context_skills_reader.py  test_context_token_monitor.py  (+51 more)
tests/integration/: conftest.py  test_adapter_swap.py  test_gate_golden.py  test_lifecycle_failure_paths.py  test_lifecycle_happy_path.py
tests/perf/: conftest.py  test_latency_benchmarks.py
(+124 files in other folders)
